:turtle::heavy_plus_sign::bug:

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Typographic Styles</title>
 
-	<link rel="stylesheet" href="css/webboy.css">
+	<link rel="stylesheet" href="css/typographic-styles.css">
 	<link rel="stylesheet" href="css/example.css">
 </head>
 
