--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="wrapper">
 		<header>
 			<h1 class="title">Typographic Styles</h1>
-			<p class="lead">Created by <a href="//twitter.com/owebboy">@owebboy</a>, this stylesheet was built to make text look super duper awesome</p>
+			<p class="lead">Created by <a href="//twitter.com/owebboy">@owebboy</a>, this stylesheet was built to make text look super duper awesome. Check it out on <a href="//github.com/owebboy/typographic-styles">Github</a>.</p>
 		</header>
 
 		<section id="text">
