--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Typographic Styles</title>
 
-	<link rel="stylesheet" href="css/typographic-styles.css">
-	<link rel="stylesheet" href="css/grid.css">
+	<link rel="stylesheet" href="libs/new-buttons/css/new-buttons.min.css">
+	<link rel="stylesheet" href="libs/o-simple-grid/css/grid.min.css">
+	<link rel="stylesheet" href="libs/typographic-styles/css/typographic-styles.min.css">
 </head>
 
 <body>
