--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="wrapper">
 		<header>
 			<h1 class="title">Typographic Styles</h1>
-			<p>Start building, dude</p>
+			<p>Start building, homie.</p>
 		</header>
 	</div>
 </body>
