--- a/index.html
+++ b/index.html
@@ -13,53 +13,61 @@
 
 <body>
 	<header class="bg-marsala">
-		<h1 class="title">Typographic Styles</h1>
-		<p class="lead">Created by <a href="//twitter.com/owebboy">@owebboy</a>, this stylesheet was built to make text look super duper awesome. Check it out on <a href="//github.com/owebboy/typographic-styles">Github</a>.</p>
+		<div class="wrapper">
+			<h1 class="title white">Typographic Styles</h1>
+			<p class="lead white">Created by <a class="white" href="//twitter.com/owebboy">@owebboy</a>, this stylesheet was built to make text look super duper awesome. Check it out on <a href="//github.com/owebboy/typographic-styles" class="white">Github</a>.</p>
+		</div>
 	</header>
 	
 	<div class="wrapper">
-		<section id="text" class="container">
-			<article id="paragraph" class="col-3">
-				<h4>Paragraph Text</h4>
-		
-				<div id="paragraphs">
-					<p contenteditable>Just A Paragraph</p>
-					<p><b contenteditable>Bold Text</b></p>
-					<p><i contenteditable>Italic Text</i></p>
-					<p><a href="#">Linked Text</a></p>
-					<p><code>some code here</code></p>
-				</div>
-			</article>
-		
-			<article id="heading" class="col-3">
-				<div class="example">
-					<h4>Heading Text</h4>
-		
-					<div id="headings">
-						<h1 contenteditable>Heading 1</h1>
-						<h2 contenteditable>Heading 2</h2>
-						<h3 contenteditable>Heading 3</h3>
-						<h4 contenteditable>Heading 4</h4>
+		<div class="frame">
+			<section id="text" class="container">
+				<article id="paragraph" class="bit-2">
+					<h4>Paragraph Text</h4>
+			
+					<div id="paragraphs">
+						<p contenteditable>Just A Paragraph</p>
+						<p><b contenteditable>Bold Text</b></p>
+						<p><i contenteditable>Italic Text</i></p>
+						<p><a href="#">Linked Text</a></p>
+						<p><code contenteditable>some code here</code></p>
 					</div>
-				</div>
-			</article>
-		</section>
-		
-		<section id="extra-classes" class="container">
-			<article class="col-3">
-				<h4>Extra Classes</h4>
-		
-				<div id="classes">
-					<section class="wrapper">
-						<h5>.wrapper</h5>
-						<p>Adds an extra margin to the selected element. Goes away on mobile.</p>
-					</section>
-		
-					<p class="title">Title Text</p>
-					<p>This is for paragraph tags that are used for emphasis</p>
-				</div>
-			</article>
-		</section>
+				</article>
+			
+				<article id="heading" class="bit-2">
+					<div class="example">
+						<h4>Heading Text</h4>
+			
+						<div id="headings">
+							<h1 contenteditable>Heading 1</h1>
+							<h2 contenteditable>Heading 2</h2>
+							<h3 contenteditable>Heading 3</h3>
+							<h4 contenteditable>Heading 4</h4>
+						</div>
+					</div>
+				</article>
+			</section>
+		</div>
+		<div class="frame">
+			<section id="extra-classes">
+				<article class="bit-3">
+					<h4>Extra Classes</h4>
+			
+					<div id="classes">
+						<section class="wrapper">
+							<h5>.wrapper</h5>
+							<p>Adds an extra margin to the selected element. Goes away on mobile.</p>
+						</section>
+			
+						<p class="title">Title Text</p>
+						<p>This is for paragraph tags that are used for emphasis</p>
+					</div>
+				</article>
+			</section>
+			<section>
+				
+			</section>
+		</div>
 	</div>
 </body>
 </html>
