--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Your Title Here</title>
 
-	<link rel="stylesheet" href="css/typographic-styles.css">
+	<link rel="stylesheet" href="css/typographic-styles.min.css">
 </head>
 
 <body>
