--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 						<p><i contenteditable>Italic Text</i></p>
 						<p><a href="#">Linked Text</a></p>
 						<p><code contenteditable>some code here</code></p>
+						<p class="uppercase" contenteditable>Uppercase Type</p>
 					</div>
 				</article>
 			
 				<article id="heading" class="bit-2">
 					<div class="example">
-						<h4>Heading Text</h4>
+						<h4>Heading</h4>
 			
 						<div id="headings">
 							<h1 contenteditable>Heading 1</h1>
@@ -50,7 +51,7 @@
 		</div>
 		<div class="frame">
 			<section id="extra-classes">
-				<article class="bit-3">
+				<article class="bit-2">
 					<h4>Extra Classes</h4>
 			
 					<div id="classes">
@@ -63,9 +64,48 @@
 						<p>This is for paragraph tags that are used for emphasis</p>
 					</div>
 				</article>
-			</section>
-			<section>
 				
+				<article class="bit-2">
+					<h4>Colors</h4>
+					<article class="frame">
+						<section id="marsala" class="bit-3">
+							<p class="uppercase marsala"><b>Marsala</b></p>
+						</section>
+						<section id="scuba-blue" class="bit-3">
+							<p class="uppercase scuba-blue"><b>Suba Blue</b></p>
+						</section>
+						<section id="classic-blue" class="bit-3">
+							<p class="uppercase classic-blue"><b>Classic Blue</b></p>
+						</section>
+					</article>
+					<article class="frame">
+						<section id="tangerine" class="bit-3">
+							<p class="uppercase tangerine"><b>Tangerine</b></p>
+						</section>
+						<section id="lucite-green" class="bit-3">
+							<p class="uppercase lucite-green"><b>Lucite Green</b></p>
+						</section>
+						<section id="custard" class="bit-3">
+							<p class="uppercase custard"><b>Custard</b></p>
+						</section>
+					</article>
+					<article class="frame">
+						<section id="steel" class="bit-3">
+							<p class="uppercase steel"><b>Steel</b></p>
+						</section>
+						<section id="iron" class="bit-3">
+							<p class="uppercase iron"><b>Iron</b></p>
+						</section>
+						<section id="oil" class="bit-3">
+							<p class="uppercase oil"><b>Oil</b></p>
+						</section>
+					</article>
+					<article class="frame">
+						<section id="black" class="bit-3">
+							<p class="uppercase black"><b>Black</b></p>
+						</section>
+					</article>
+				</article>
 			</section>
 		</div>
 	</div>
